style : corrections de défauts de code mineurs