@@ -5,6 +5,7 @@ import org.junit.jupiter.api.Test;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -13,10 +14,10 @@ class OrderTest {
     @Test
     void shouldCreateOrderWithValidData() {
         Product product1 = new Product(1, "Product 1", 10.0);
-        OrderProduct orderProduct1 = new OrderProduct(1l,product1, 2);
+        OrderProduct orderProduct1 = new OrderProduct(1L,product1, 2);
 
         Customer customer = new Customer(1, "John", "Doe");
-        Order order = new Order(1, customer, LocalDate.now(), Arrays.asList(orderProduct1));
+        Order order = new Order(1, customer, LocalDate.now(), List.of(orderProduct1));
 
         assertEquals(1, order.getNumOrder());
         assertEquals(customer, order.getCustomer());
@@ -45,8 +46,8 @@ class OrderTest {
         Product product1 = new Product(1, "Product 1", 10.0);
         Product product2 = new Product(2, "Product 2", 20.0);
 
-        OrderProduct orderProduct1 = new OrderProduct(1l,product1, 2);
-        OrderProduct orderProduct2 = new OrderProduct(2l,product2, 1);
+        OrderProduct orderProduct1 = new OrderProduct(1L,product1, 2);
+        OrderProduct orderProduct2 = new OrderProduct(2L,product2, 1);
 
         Customer customer = new Customer(1, "John", "Doe");
 
